--- a/front-end/src/components/SuspenseLoding/index.css
+++ b/front-end/src/components/SuspenseLoding/index.css
@@ -1,6 +1,6 @@
 
 .loading {
-  background-color: #282c34;
+  background-color: #fff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
